# aspen_pluspy

./: .gitignore  pyproject.toml
simulation/: ACN-H2O_Conventional_S1.bkp
src/: main.py
src/aspen/: aspen_simulation.py
src/aspen/utils/: aspen_variable.py  material_stream.py  radfrac_block.py
src/metrics/: eco_indicator99.py  energy_cost.py  equipments_cost.py
src/optimizer/: simulated_annealing.py  simulated_annealing_configuration.py  simulated_annealing_design_variable.py  simulated_annealing_result.py
